--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
         "spatie/laravel-permission": "^2.11"
     },
     "require-dev": {
