--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "~2.1.0",
         "spatie/laravel-permission": "^2.11",
         "yajra/laravel-datatables-oracle": "^7.0"
     },
